--- a/modules/file_upload/static/css/style.css
+++ b/modules/file_upload/static/css/style.css
@@ -75,12 +75,15 @@ body.file-form-field,
 	text-decoration: none;
 	padding: 1px 10px 1px;
 	border-radius: 5px;
-	margin-right: 10px;
-	background: #ffffff;	
+	margin: 0 10px 0 0;
+	background: #ffffff;
+	font-weight: normal;	
 }
 
+.file-form-field .file_list .delete:hover,
 .file-form-field .file_list a:hover {
 	color: red;
+	cursor: pointer;
 }
 	
 .file-form-field .file_list .size {
